--- a/app/src/main/res/layout/summary_card.xml
+++ b/app/src/main/res/layout/summary_card.xml
@@ -45,6 +45,7 @@
                 android:id="@+id/tvCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:textSize="50px"
                 android:textColor="#000000"
                 android:text="Acidity" />
