--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A9A9A9"
     android:orientation="vertical"
     tools:context=".SummaryActivity">
 
@@ -14,15 +13,23 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginHorizontal="20px"
+        android:layout_marginTop="25px"
         android:textColor="#000000"
         android:textSize="75px"
-        android:text="Title" />
+        android:hint="Title" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="20px"
+        android:layout_marginBottom="25px"
+        android:background="@color/colorPrimaryDark"/>
 
     <ImageView
         android:id="@+id/ivSummary"
         android:layout_width="500px"
         android:layout_height="500px"
         android:layout_marginHorizontal="20px"
+        android:layout_margin="25px"
         android:layout_gravity="center"/>
 
     <TextView
@@ -31,14 +38,31 @@
         android:layout_height="wrap_content"
         android:gravity="left"
         android:layout_marginHorizontal="20px"
+        android:layout_margin="25px"
         android:textColor="#000000"
         android:textSize="40px"
-        android:text="Description" />
+        android:hint="Description" />
+
+    <TextView
+        android:id="@+id/tvControls"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginHorizontal="20px"
+        android:layout_marginTop="25px"
+        android:textColor="#000000"
+        android:textSize="75px"
+        android:text="Current Data" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="20px"
+        android:layout_marginBottom="20px"
+        android:background="@color/colorPrimaryDark"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSummary"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="20px" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
