--- a/app/src/main/res/layout/home_card.xml
+++ b/app/src/main/res/layout/home_card.xml
@@ -12,8 +12,7 @@
     <RelativeLayout
         android:id="@+id/rlHome"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/ic_launcher_background">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tvBackground"
@@ -37,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Date Planted"
+            android:layout_marginRight="25px"
             android:layout_alignRight="@id/tvBackground"
             android:layout_alignBottom="@id/tvBackground"/>
 
