--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,17 @@
 <resources>
 
-    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme.withActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">#ffffff</item>
         <item name="colorPrimaryDark">#000000</item>
         <item name="colorAccent">#228B22</item>
+        <item name="titleTextColor">#000000</item>
+    </style>
+
+    <style name="AppTheme.withoutActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">#ffffff</item>
+        <item name="colorPrimaryDark">#000000</item>
+        <item name="colorAccent">#228B22</item>
+        <item name="titleTextColor">#ffffff</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
