--- a/app/src/main/res/layout/home_card.xml
+++ b/app/src/main/res/layout/home_card.xml
@@ -2,20 +2,19 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="500px"
+    android:id="@+id/cvHome"
+    android:layout_width="match_parent"
     android:layout_height="500px"
     app:cardCornerRadius="30px"
-    app:cardUseCompatPadding="true"
-    android:layout_margin="20px"
-    android:id="@+id/cvHome">
+    android:layout_margin="25px">
 
     <RelativeLayout
         android:id="@+id/rlHome"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tvBackground"
+        <View
+            android:id="@+id/vBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
@@ -29,16 +28,19 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:textColor="#000000"
+            android:textSize="100px"
+            android:textStyle="bold"
             android:text="Plant 1"/>
 
         <TextView
             android:id="@+id/tvDateHome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="50px"
             android:text="Date Planted"
             android:layout_marginRight="25px"
-            android:layout_alignRight="@id/tvBackground"
-            android:layout_alignBottom="@id/tvBackground"/>
+            android:layout_alignRight="@id/vBackground"
+            android:layout_alignBottom="@id/vBackground"/>
 
     </RelativeLayout>
 
