--- a/app/src/main/res/layout/summary_card.xml
+++ b/app/src/main/res/layout/summary_card.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="100px"
                 android:textColor="#000000"
-                android:textAlignment="center"
+                android:gravity="center"
                 android:text="0PH" />
 
             <TextView
